--- a/public/index.html
+++ b/public/index.html
@@ -21,8 +21,8 @@
                     <div class="twelve wide center aligned column">
                         <div class="ui segment">
                             <h1 class="ui header"><i class="power off huge icon"></i>Power</h1>
-                            <div class="ui toggle checkbox">
-                                <input type="checkbox" name="power" id="fan-power">
+                            <div class="ui toggle checkbox" id="fan-power">
+                                <input type="checkbox" name="power">
                                 <label>Power On</label>
                             </div>
                         </div>
@@ -30,7 +30,8 @@
                 </div>
                 <div class="center aligned row">
                     <div class="twelve wide center aligned column">
-                        <div class="ui segment">
+                        <div class="ui blurring segment" id="seg-child">
+                            <div class="ui inverted dimmer"></div>
                             <div class="ui two column stackable very relaxed grid">
                                 <div class="column">
                                     <h1 class="ui header"><i class="list ui huge icon"></i>Mode</h1>
@@ -38,18 +39,18 @@
                                         <i class="dropdown icon"></i>
                                         <div class="text"></div>
                                         <div class="menu">
-                                            <div class="item">Auto</div>
-                                            <div class="item">Remote</div>
-                                            <div class="item">Detect</div>
+                                            <div class="item" data-value="0">Auto</div>
+                                            <div class="item" data-value="1">Remote</div>
+                                            <div class="item" data-value="2">Detect</div>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="column">
                                     <h1 class="ui header"><i class="sync alternate huge icon"></i>Speed</h1>
                                     <div class="three ui buttons">
-                                        <button class="teal basic ui button" id="fan-speed-low">Low</button>
-                                        <button class="green basic ui button" id="fan-speed-med">Medium</button>
-                                        <button class="red basic ui button" id="fan-speed-high">High</button>
+                                        <button class="teal basic ui button speed" id="fan-speed-low">Low</button>
+                                        <button class="green basic ui button speed" id="fan-speed-med">Medium</button>
+                                        <button class="red basic ui button speed" id="fan-speed-high">High</button>
                                     </div>
                                 </div>
                             </div>
@@ -64,10 +65,6 @@
 
     <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
     <script src="semantic.min.js"></script>
-    <script>
-        $(document).ready(function() {
-            $('.ui.dropdown').dropdown();
-        });
-    </script>
+    <script src="scripts/control.js"></script>
 </body>
 </html>
